# megaquarium-tools

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  cli-check-aquarium.rkt  cli-check-listing.rkt  cli-extract.rkt  cli-info.rkt  cli-lookup.rkt  cli.cmd  cli.rkt  constraint.rkt  core.rkt  data.rkt  display.rkt  generate.rkt  lift.rkt  localization.rkt  rustfmt.toml  serialize.rkt  synth.rkt  test-util.rkt  test.rkt  types.rkt
core/: animal.rkt  aquarium.rkt  localization.rkt  search.rkt  serialization.rkt  struct.rkt  tank.rkt  test.rkt
data/: game-data.rkt  loader.rkt  paths.rkt  serialization.rkt
docs/: decoration-research.md  fixture-research.md
docs/design-plans/: 2026-02-01-check-report-separation.md  2026-03-02-feeding-skill.md
docs/test-plans/: 2026-03-02-feeding-skill.md
src/: animal.rs  aquarium.rs  check.rs  data.rs  decoration.rs  fixture.rs  main.rs  paths.rs  report.rs  rules.rs  sexp.rs  sexpr_format.rs  sexpr_impl.rs  tank.rs  util.rs
test/: test.rkt
