[package]
name = "megaquarium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"]}
directories = "4.0.1"
lazy_static = "1.4.0"
regex = "1.5.4"
serde_json = "1.0.104"
